--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,20 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Log in</a>
                 </li>
-                <li class="nav-item" *ngIf="!showSearch">
-                    <button class="btn btn-outline-success" type="button" (click)="toggleSearch()">
-                    Search
-                  </button>
-                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Search</a>
             </ul>
-            <form class="d-flex" *ngIf="showSearch" (submit)="onSearch()">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchTerm" name="searchTerm">
-                <button class="btn btn-outline-success" type="search">
-                  Submit
-              </button>
-                <!-- Optionally, include a close button to hide the search form -->
-                <!-- <button class="btn btn-outline-danger" type="button" (click)="showSearch=false">Close</button> -->
-            </form>
         </div>
     </div>
 </nav>
