--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,1 +1,12 @@
-<p>search works!</p>
+<div class="contain mt-5 p-5">
+    <form [formGroup]="searchform" (ngSubmit)="submitForm()">
+        <div class="row">
+            <div class="mb-3 col-lg-10">
+                <input type="text" class="form-control" placeholder="Search Movie here...">
+            </div>
+            <div class="col-lg-2">
+                <button class="btn btn-md">Search</button>
+            </div>
+        </div>
+    </form>
+</div>
