--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,45 @@
+<!--bannner start-->
+<div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+    <div class="carousel-inner">
+        <div class="carousel-item active" *ngFor="let b of bannerData; let i=index" [ngClass]="{active:i===0}">
+            <img src="http://image.tmdb.org/t/p/w1280/{{b.backdrop_path}}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h2>{{b.title}}</h2>
+                <p>{{b.overview}}</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+  </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
+<!-- banner end -->
+
+<div class="full-width-container">
+    <div class="row">
+        <!-- Popular Movies  -->
+        <h5 class="text-white">Popular Movies</h5>
+    </div>
+    <div class="rowposter mp-4 p-2">
+        <ng-container *ngFor="let m of popularMovies">
+            <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="...">
+        </ng-container>
+    </div>
+</div>
+<div class="full-width-container">
+    <div class="row">
+        <!-- Popular Movies  -->
+        <h5 class="text-white">Now Playing</h5>
+    </div>
+    <div class="rowposter mp-4 p-2">
+        <ng-container *ngFor="let m of nowPlaying">
+            <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="...">
+        </ng-container>
+    </div>
+</div>
