--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,23 @@
 <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid justify-content-between">
         <a class="navbar-brand" routerLink="">Show Time</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <button class="navbar-toggler" type="button" (click)="toggleNavbar()" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" [class.show]="navbarOpen" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <li class="nav-item" (click)="navbarOpen ? toggleNavbar() : null">
                     <a class="nav-link active" aria-current="page" routerLink="">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" (click)="navbarOpen ? toggleNavbar() : null">
                     <a class="nav-link" routerLink="signup">Sign up</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" (click)="navbarOpen ? toggleNavbar() : null">
                     <a class="nav-link" routerLink="login">Log in</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" (click)="navbarOpen ? toggleNavbar() : null">
                     <a class="nav-link" routerLink="search">Search</a>
+                </li>
             </ul>
         </div>
     </div>
