--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,11 +20,11 @@
 </div>
 
 <!-- banner end -->
-<div class="full-width-container py-3">
+<div class="full-width-container py-4">
     <div class="row">
         <h5 class="text-white">Popular Movies</h5>
     </div>
-    <div class="rowposter p-2">
+    <div class="rowposter p-1">
         <ng-container *ngFor="let m of popularMovies">
             <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="...">
         </ng-container>
@@ -32,9 +32,9 @@
 </div>
 <div class="full-width-container ">
     <div class="row">
-        <h5 class="text-white">Now Playing</h5>
+        <h5 class="text-white ">Now Playing</h5>
     </div>
-    <div class="rowposter ">
+    <div class="rowposter py-2">
         <ng-container *ngFor="let m of nowPlaying">
             <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="...">
         </ng-container>
