Update CSS styles and add router link to movie posters movie details and api update

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
     <div class="carousel-inner">
         <div class="carousel-item active" *ngFor="let b of bannerData; let i=index" [ngClass]="{active:i===0}">
-            <img src="http://image.tmdb.org/t/p/w1280/{{b.backdrop_path}}" class="d-block w-100" alt="...">
+            <img src="http://image.tmdb.org/t/p/w1280/{{b.backdrop_path}}" class="d-block w-100" alt="..." [routerLink]="['/movie', b.id]">
             <div class="carousel-caption d-none d-md-block">
                 <h2>{{b.title}}</h2>
                 <p>{{b.overview}}</p>
@@ -26,8 +26,9 @@
     </div>
     <div class="rowposter p-1">
         <ng-container *ngFor="let m of popularMovies">
-            <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="...">
+            <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="..." [routerLink]="['/movie', m.id]">
         </ng-container>
+
     </div>
 </div>
 <div class="full-width-container ">
@@ -36,7 +37,7 @@
     </div>
     <div class="rowposter py-2">
         <ng-container *ngFor="let m of nowPlaying">
-            <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="...">
+            <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="..." [routerLink]="['/movie', m.id]">
         </ng-container>
     </div>
 </div>
