--- a/src/app/pages/search/search.component.css
+++ b/src/app/pages/search/search.component.css
@@ -10,8 +10,14 @@ button:hover {
 
 img {
     width: 100%;
+    transition: transform 450ms;
 }
 
 h5 {
     color: #ffffff;
+}
+
+.row img:hover {
+    transform: scale(1.2);
+    cursor: pointer;
 }
