--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -15,7 +15,7 @@
 ">
             <div class="row">
                 <div class="col-lg-3 mt-3 mb-3">
-                    <img src="http://image.tmdb.org/t/p/w1280/{{movie.poster_path}}" class="card-img-top" alt="...">
+                    <img src="http://image.tmdb.org/t/p/w1280/{{movie.poster_path}}" class="card-img-top" alt="..." [routerLink]="['/movie', movie.id]">
                 </div>
 
                 <div class="col-lg-9">
