--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -31,13 +31,87 @@
 
     </div>
 </div>
-<div class="full-width-container ">
-    <div class="row">
-        <h5 class="text-white ">Now Playing</h5>
-    </div>
-    <div class="rowposter py-2">
-        <ng-container *ngFor="let m of nowPlaying">
-            <img src="http://image.tmdb.org/t/p/w500/{{m.poster_path}}" class="rowimg largeposter" alt="..." [routerLink]="['/movie', m.id]">
+<!-- action movies  -->
+<div class="row mt-4">
+    <h5 class="text-white">Action Movies</h5>
+    <div class="rowposter mt-3 p-2">
+        <ng-container *ngFor="let a of actionMovieResult">
+            <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" class="rowimg largeposter" alt="..." [routerLink]="['/movie',a.id]">
         </ng-container>
+
     </div>
+
+</div>
+
+<!-- adventure movies  -->
+<div class="row mt-4">
+    <h5 class="text-white">adventure Movies</h5>
+    <div class="rowposter mt-3 p-2">
+        <ng-container *ngFor="let a of adventureMovieResult">
+            <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" class="rowimg largeposter" alt="..." [routerLink]="['/movie',a.id]">
+        </ng-container>
+
+    </div>
+
+</div>
+
+
+<!-- animation movies  -->
+<div class="row mt-4">
+    <h5 class="text-white">Animation Movies</h5>
+    <div class="rowposter mt-3 p-2">
+        <ng-container *ngFor="let a of animationMovieResult">
+            <img src="https://image.tmdb.org/t/p/original/{{ a.poster_path }}" class="rowimg largeposter" alt="..." [routerLink]="['/movie',a.id]">
+        </ng-container>
+
+    </div>
+
+</div>
+
+<!-- comedy movies  -->
+<div class="row mt-4">
+    <h5 class="text-white">Comedy Movies</h5>
+    <div class="rowposter mt-3 p-2">
+        <ng-container *ngFor="let c of comedyMovieResult">
+            <img src="https://image.tmdb.org/t/p/original/{{ c.poster_path }}" class="rowimg largeposter" alt="..." [routerLink]="['/movie',c.id]">
+        </ng-container>
+
+    </div>
+
+</div>
+
+<!-- documentary movies  -->
+<div class="row mt-4">
+    <h5 class="text-white">Documentary Movies</h5>
+    <div class="rowposter mt-3 p-2">
+        <ng-container *ngFor="let d of documentaryMovieResult">
+            <img src="https://image.tmdb.org/t/p/original/{{ d.poster_path }}" class="rowimg largeposter" alt="..." [routerLink]="['/movie',d.id]">
+        </ng-container>
+
+    </div>
+
+</div>
+
+<!-- science-fiction movies  -->
+<div class="row mt-4">
+    <h5 class="text-white">Science-Fiction Movies</h5>
+    <div class="rowposter mt-3 p-2">
+        <ng-container *ngFor="let sf of sciencefictionMovieResult">
+            <img src="https://image.tmdb.org/t/p/original/{{ sf.poster_path }}" class="rowimg largeposter" alt="..." [routerLink]="['/movie',sf.id]">
+        </ng-container>
+
+    </div>
+
+</div>
+
+<!-- thriller movies  -->
+<div class="row mt-4">
+    <h5 class="text-white">Thriller Movies</h5>
+    <div class="rowposter mt-3 p-2">
+        <ng-container *ngFor="let th of thrillerMovieResult">
+            <img src="https://image.tmdb.org/t/p/original/{{ th.poster_path }}" class="rowimg largeposter" alt="..." [routerLink]="['/movie',th.id]">
+        </ng-container>
+
+    </div>
+
 </div>
