--- a/src/app/pages/movie-details/movie-details.component.css
+++ b/src/app/pages/movie-details/movie-details.component.css
@@ -1,8 +1,3 @@
-img {
-    width: 100%;
-    height: auto;
-}
-
 h1 {
     color: #ffffff;
     font-weight: bold;
@@ -16,10 +11,33 @@ a {
     background-color: #E50914;
     color: #ffffff;
     text-decoration: none;
+    padding: 10px 20px;
+    /* 增加了一些内边距以改善点击区域 */
+    border-radius: 5px;
+    /* 添加了圆角 */
 }
 
 a:hover {
-    background-color: #E50914;
-    color: #ffffff;
     border: 2px solid #ffffff;
+}
+
+
+/* 媒体查询 */
+
+@media (max-width: 768px) {
+    img {
+        margin: 0 auto;
+    }
+    /* 可以在这里添加更多的样式调整，以改善小屏幕上的显示效果 */
+    h1,
+    p {
+        padding: 0 10px;
+    }
+    .col-lg-12 {
+        max-width: 100%;
+    }
+    .col-lg-2,
+    .col-lg-10 {
+        max-width: 50%;
+    }
 }
