--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -1,29 +1,36 @@
-<div class="contain mt-5">
-    <div class="row p-5">
-        <div class="col-lg-2" *ngIf="MovieDetailResult.poster_path">
-            <img src="https://image.tmdb.org/t/p/w1280/{{ MovieDetailResult.poster_path }}">
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="video-wrapper mt-4">
+                <!-- 视频 -->
+                <iframe style="width: 100%; height: 500px;" [src]="getSafeUrl(MovieVideoResult)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
-        <div class="col-lg-10 mt-5 p-4">
-            <h1 class="mt-2 mb-2">{{MovieDetailResult.original_title}}</h1>
-            <p class="mt-3 mb-3">{{MovieDetailResult.overview}}</p>
+    </div>
+    <div class="row mt-5">
+        <div class="col-lg-2">
+            <!-- 海报 -->
+            <img *ngIf="MovieDetailResult.poster_path" src="https://image.tmdb.org/t/p/w1280/{{ MovieDetailResult.poster_path }}" style="width: 100%; height: auto;">
+        </div>
+        <div class="col-lg-10">
+            <h1>{{MovieDetailResult.original_title}}</h1>
+            <p>{{MovieDetailResult.overview}}</p>
             <a class="btn btn-md" href="https://www.themoviedb.org/video/play?key={{MovieVideoResult}}">watch trailer</a>
 
-            <div class="mt-4 p-4">
-                <h2 class="text-white">Top Cast</h2>
-                <div class="row">
-                    <div class="col-lg-4" *ngFor="let c of MovieCastResult">
-                        <div class="row mt-2 mb-2">
-                            <div class="col-lg-2" *ngIf="c.profile_path">
-                                <img src="https://image.tmdb.org/t/p/original/{{ c.profile_path}}">
-                            </div>
-                            <div class="col-lg-10">
-                                <h3 class="text-white">{{c.original_name}}</h3>
-                                <p class="text-white">{{c.character}}</p>
-                            </div>
-                        </div>
-
+        </div>
+    </div>
+    <div class="col-lg-10 p-4">
+        <h2 class="text-white">Top Cast</h2>
+        <div class="row">
+            <div class="col-lg-4" *ngFor="let c of MovieCastResult">
+                <div class="row mt-2">
+                    <div class="col-lg-2" *ngIf="c.profile_path">
+                        <img src="https://image.tmdb.org/t/p/original/{{ c.profile_path }}" style="width: 100%; height: auto;">
                     </div>
-
+                    <div class="col-lg-10">
+                        <h3 class="text-white">{{c.original_name}}</h3>
+                        <p class="text-white">{{c.character}}</p>
+                    </div>
                 </div>
             </div>
         </div>
