--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -22,8 +22,8 @@
     <div class="col-lg-10 p-4">
         <h2 class="text-white">Top Cast</h2>
         <div class="row">
-            <div class="col-lg-4" *ngFor="let c of MovieCastResult">
-                <div class="row mt-2">
+            <div class="col-lg-" *ngFor="let c of MovieCastResult">
+                <div class="row mt-5">
                     <div class="col-lg-2" *ngIf="c.profile_path">
                         <img src="https://image.tmdb.org/t/p/original/{{ c.profile_path }}" style="width: 100%; height: auto;">
                     </div>
