--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -15,11 +15,11 @@
         <div class="col-lg-10">
             <h1>{{MovieDetailResult.original_title}}</h1>
             <p>{{MovieDetailResult.overview}}</p>
-            <a class="btn btn-md" href="https://www.themoviedb.org/video/play?key={{MovieVideoResult}}">watch trailer</a>
+            <a class="btn btn-md" href="https://www.themoviedb.org/video/play?key={{MovieVideoResult}}">Watch it Now!</a>
 
         </div>
     </div>
-    <div class="col-lg-10 p-4">
+    <div class="cob-lg-10 p-4">
         <h2 class="text-white">Top Cast</h2>
         <div class="row">
             <div class="col-lg-4" *ngFor="let c of MovieCastResult">
