--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,8 @@
 <!--bannner start-->
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
     <div class="carousel-inner">
-        <div class="carousel-item active" *ngFor="let b of bannerData; let i=index" [ngClass]="{active:i===0}">
+        <div *ngFor="let b of bannerData; let i = index" class="carousel-item" [class.active]="i === 0">
+            <!-- 只有當索引為 0 時添加 active 類 -->
             <div class="aposter">
                 <img src="http://image.tmdb.org/t/p/w1280/{{b.backdrop_path}}" class="d-block w-100" alt="..." [routerLink]="['/movie', b.id]">
             </div>
@@ -14,6 +15,7 @@
             </div>
         </div>
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
