Update CSS styles in login, signup, and forgot password components, and update routing in app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,7 @@
                     <a class="nav-link active" aria-current="page" routerLink="">Home</a>
                 </li>
                 <li class="nav-item" (click)="navbarOpen ? toggleNavbar() : null">
-                    <a class="nav-link" routerLink="signup">Sign up</a>
-                </li>
-                <li class="nav-item" (click)="navbarOpen ? toggleNavbar() : null">
-                    <a class="nav-link" routerLink="login">Log in</a>
+                    <a class="nav-link" routerLink="login">Log in / Sign up</a>
                 </li>
                 <li class="nav-item" (click)="navbarOpen ? toggleNavbar() : null">
                     <a class="nav-link" routerLink="search">Search</a>
