--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,19 +1,23 @@
 <div class="login-container">
     <form (ngSubmit)="onSubmit()">
-        <h2>登入</h2>
+        <h2>Login</h2>
         <div class="form-group">
-            <label for="email">電子郵箱:</label>
+            <label for="email">Email:</label>
             <input type="email" id="email" [(ngModel)]="user.email" name="email" required>
         </div>
         <div class="form-group">
-            <label for="password">密碼:</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" [(ngModel)]="user.password" name="password" required>
         </div>
         <div class="form-group">
-            <button type="submit">登入</button>
+            <button type="submit">Login</button>
+        </div>
+        <!-- 添加注册和忘记密码的按钮，并设置路由链接 -->
+        <div class="form-group">
+            <button type="button" routerLink="/login/signup">Sign Up</button>
         </div>
         <div class="form-group">
-            <button type="button" (click)="forgotPassword()">忘記密碼?</button>
+            <button type="button" routerLink="/login/resetpassword">Forgot Password?</button>
         </div>
     </form>
 </div>
