--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -24,8 +24,8 @@
         <div class="message-box">
             <h3>Leave a Comment</h3>
             <textarea placeholder="Enter your comment" style="width: 100%;"></textarea>
-            <!-- <button class="btn btn-md" (click)="submitComment()">Submit</button>
-            <p *ngIf="!isLoggedIn">Please log in to leave a comment.</p> -->
+            <button class="btn btn-md" (click)="submitReview">Submit</button>
+            <p *ngIf="!isLoggedIn">Please log in to leave a comment.</p>
         </div>
     </div>
     <div class="cob-lg-10 p-4">
