--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
             <input type="password" id="password" [(ngModel)]="user.password" name="password" required>
         </div>
         <div class="form-group">
-            <button type="submit">Login</button>
+            <button type="submit" routerLink="/">Login</button>
         </div>
         <!-- 添加注册和忘记密码的按钮，并设置路由链接 -->
         <div class="form-group">
